# agent-library

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  eval_context_tools.py  mkdocs.yml  pyproject.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  concepts.md  configuration.md  index.md  install.md  quickstart.md  troubleshooting.md
docs/assets/: extra.css
docs/integrations/: claude-code.md  claude-desktop.md  coding-agents.md  cursor.md
librarian/: __init__.py  cli.py  config.py  health.py  ids.py  indexing.py  server.py  tool_outputs.py  types.py
librarian/connectors/: __init__.py  base.py  local_file.py
librarian/orchestrator/: __init__.py  orchestrator.py
librarian/processing/: vision.py
librarian/processing/embed/: __init__.py  local.py
librarian/processing/parsers/: __init__.py  base.py  code.py  image.py  md.py  pdf.py  registry.py
librarian/providers/: anthropic.py  oai.py
librarian/retrieval/: search.py
librarian/sources/: __init__.py  ignore.py
librarian/storage/: __init__.py  _common.py  database.py  factory.py  fts_store.py  migrate.py  protocols.py  rebuild.py  schema_version.py  sqlite_storage.py  vector_store.py  write_models.py
librarian/storage/postgres/: __init__.py  database.py  fts_store.py  migrate.py  storage.py  vector_store.py
skills/agent-library/: AGENTS.md  SKILL.md  package.json  skill.json
skills/agent-library/src/: index.ts  lib.test.ts  lib.ts
tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_database.py  test_file_read_errors.py  test_gitignore.py  test_health.py  test_import_boundaries.py  test_import_contracts.py  test_multimodal.py  test_ocr.py  test_orchestrator.py  test_schema_rebuild.py  test_storage_contract.py  test_tools.py  test_vision.py
