[project]
name = "agent-library"
version = "0.14.0"
description = "Multi-modal knowledge library with vector and full-text search for text, code, images, and PDFs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Arcade.dev", email = "dev@arcade.dev" }
]
keywords = ["markdown", "code", "search", "vector", "embeddings", "mcp", "ai", "multimodal", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "arcade-mcp-server>=1.21.0",
    "arcade-tdk>=3.8.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
]

[project.scripts]
librarian = "librarian.cli:app"
libr = "librarian.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "ruff>=0.7.4",
    "types-pyyaml>=6.0.1",
    "import-linter>=2.0",
]
code = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
pdf = [
    "pypdf>=4.0.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
vision = [
    "Pillow>=10.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "torchvision>=0.15.0",
]
all = [
    "agent-library[code,pdf,ocr,vision,postgres]",
]
evals = [
    "arcade-mcp[evals]>=1.14.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# import-linter: wall off private internals from the sanctioned forward path.
# Consumers (downstream products, third parties) should depend on the public
# surface -- connectors, the Orchestrator, the Storage protocols, types/config --
# not on private modules like librarian.storage.database or librarian.indexing.
# These contracts enforce the parts of that boundary observable within this repo:
# connectors stay storage/indexing-free, and the abstract storage protocols never
# pull in a concrete backend.
[tool.importlinter]
root_package = "librarian"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Connectors are stateless: no storage, indexing, server, or CLI imports"
type = "forbidden"
source_modules = ["librarian.connectors"]
forbidden_modules = [
    "librarian.storage.database",
    "librarian.storage.sqlite_storage",
    "librarian.storage.postgres",
    "librarian.storage.vector_store",
    "librarian.storage.fts_store",
    "librarian.indexing",
    "librarian.server",
    "librarian.cli",
]

[[tool.importlinter.contracts]]
name = "Storage protocols stay abstract: no direct concrete backend imports"
type = "forbidden"
source_modules = ["librarian.storage.protocols"]
forbidden_modules = [
    "librarian.storage.database",
    "librarian.storage.sqlite_storage",
    "librarian.storage.postgres",
]
# Only direct imports: protocols references the read-side result types
# (fts_store / vector_store) under TYPE_CHECKING, which transitively reach the
# concrete Database. We forbid protocols from *directly* depending on a concrete
# write backend, not those typing-only edges.
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "App-facing storage consumers use the storage factory, not concrete backends"
type = "forbidden"
source_modules = [
    "librarian.cli",
    "librarian.server",
    "librarian.retrieval",
    "librarian.orchestrator",
]
forbidden_modules = [
    "librarian.storage.database",
    "librarian.storage.sqlite_storage",
    "librarian.storage.postgres",
    "librarian.storage.vector_store",
    "librarian.storage.fts_store",
]
ignore_imports = [
    # SQLite-only maintenance/backcompat paths. Normal app-facing read/write
    # paths must go through librarian.storage.factory.
    "librarian.cli -> librarian.storage.database",
    "librarian.server -> librarian.storage.database",
]
# Direct imports only: these modules may depend on concrete backends through
# librarian.storage.factory, which is the approved substrate-selection boundary.
allow_indirect_imports = true

[tool.hatch.build.targets.wheel]
packages = ["librarian"]

[tool.mypy]
files = ["librarian/**/*.py"]
exclude = ["librarian/cli\\.py$"]  # CLI wraps decorated server functions
python_version = "3.10"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true

# psycopg / pgvector are optional (the `postgres` extra) and may be absent in
# the type-check environment; skip following them so the Postgres backend
# type-checks with or without the driver installed.
[[tool.mypy.overrides]]
module = ["psycopg.*", "pgvector.*", "psycopg_pool.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (loads real embedding model)",
]
addopts = "-m 'not slow'"

[tool.coverage.report]
skip_empty = true

# Ruff configuration is in .ruff.toml

[tool.coverage.run]
source = ["librarian"]
omit = ["librarian/__pycache__/*"]
